<resources>
    <string name="app_name">Expense Tracker</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!--Transaction Detail-->
    <string name="delete_transaction_dialog_title">Delete Transaction</string>
    <string name="delete_transaction_dialog_body">Do you really want to delete this transaction?</string>
    <string name="expense_type_expense">Expense</string>
    <string name="expense_type_income">Income</string>
    <string name="title_value">Value</string>
    <string name="title_category">Category</string>
    <string name="title_currency">Currency</string>
    <string name="title_expense_type">Expense Type</string>
    <string name="title_date">Date</string>
    <string name="error_amount_is_zero">Transaction value can not be zero.</string>
    <string name="error_please_select_category">Please select a category.</string>
    <string name="loading_exchange_rate">Loading Exchange Rate...</string>
    <string name="loading_exchange_rate_failure">Loading Exchange Rate failed...</string>
    <string name="transaction_detail_delete_transaction_fab">Delete Dransaction</string>
    <string name="transaction_detail_save_transaction_fab">Save Transaction</string>


    <string name="transaction_list_add_new_transaction_fab">Add New Transaction</string>
    <string name="category_list_add_new_category_fab">Add New Category</string>
    <string name="currency_nzd">NZD</string>

</resources>